[package]
name = "async-io-examples"
version = "0.1.0"
authors = ["fuliangliang <fuliangliang@oppo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = { version = "0.8.0", features = ["os-poll", "net"] }
tokio = { version = "1.16.1", features = ["full"] }
tokio-util = { version="0.6.9", features = ["full"]}
tokio-stream = "0.1"
futures = { version="0.3.19", features = ["thread-pool"] } 